# devstack-gate

./: .testr.conf  MANIFEST.in  README.rst  devstack-vm-delete.py  devstack-vm-fetch.py  devstack-vm-give.py  devstack-vm-inprogress.py  devstack-vm-launch.py  devstack-vm-reap.py  devstack-vm-result.py  devstack-vm-threshold.py  devstack-vm-update-image.py  setup.cfg  test-requirements.txt  tox.ini  utils.py  vmdatabase.py
devstack_gate/: myjenkins.py  utils.py  vmdatabase.py
devstack_gate/tests/: test_vmdatabase.py
