[metadata]
name = devstack-gate
summary = Devstack gate scripts used by Openstack CI team
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = https://github.com/openstack-infra/devstack-gate
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[nosetests]
verbosity=2
detailed-errors=1
cover-erase = true
cover-inclusive = true
